# mini_ap

./: .gitignore  Cargo.toml  README.md  ap_config.toml  default.nix  environment_setup.md  flake.nix  gater_config.toml  result  shell.nix
migrations/: 20240403005533_init.up.sql  V1__initial.sql
old_src/src/: config.rs  lib.rs  main.rs
old_src/src/activitystream_objects/: collections.rs  core_types.rs  object.rs
old_src/src/api/: webfinger.rs
old_src/src/db/: actor_utilities.rs  conn.rs  internal_actor.rs  mod.rs  public_key.rs
old_src/src/protocol/: fetch.rs  instance_actor.rs  mod.rs  verification.rs
sql/: schema.sql
sqlite/: .env
sqlite/db/: analytics.sqlite;
sqlite/migrations/: 20240804202128_init.up.sql
src/: app.rs  cache_and_fetch.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  oldmain.rs
src/activitystream_objects/: activities.rs  actors.rs  collections.rs  context.rs  core_types.rs  create.rs  delete.rs  follow_and_response.rs  inboxable.rs  link.rs  mod.rs  new_post.rs  note.rs  object.rs  postable.rs  public_key.rs  question.rs
src/ap_protocol/: fetch.rs  incoming.rs  mod.rs  outgoing.rs
src/api/: activities.rs  actor.rs  inbox.rs  mod.rs  object.rs  outbox.rs  page_query.rs  routes.rs  tests.rs  webfinger.rs
src/api/ap_api/: actor.rs  inbox.rs  mod.rs  object.rs  outbox.rs  routes.rs  tests.rs  webfinger.rs
src/api/versia_api/: inbox.rs  instance_discovery.rs  mod.rs  outbox.rs  posts.rs  routes.rs  users.rs
src/cryptography/: digest.rs  error.rs  key.rs  mod.rs  openssl.rs  private_key.rs
src/db/: actor_utilities.rs  conn.rs  incoming.rs  mod.rs  pg_conn.rs  private_key.rs  tests.rs
src/db/archive/: account_creation.rs  private_key.rs  public_key.rs
src/db/postgres/: acct_mgmt.rs  actors.rs  follows.rs  init.rs  instance_actor.rs  local_users.rs  mod.rs  pg_conn.rs  posts.rs
src/db/utility/: instance_actor.rs  mod.rs  new_actor.rs  permission.rs  post_types.rs  protocols.rs
src/old/: models.rs  old_config.rs
src/protocol/: digest.rs  errors.rs  fetch.rs  headers.rs  http_method.rs  incoming.rs  instance_actor.rs  mod.rs  outgoing.rs  post.rs  verification.rs
src/protocol/ap_protocol/: fetch.rs  incoming.rs  mod.rs  outgoing.rs  signature.rs  verification.rs
src/protocol/versia_protocol/: mod.rs  requests.rs  signatures.rs  verify.rs
src/protocols/protocol/: headers.rs  mod.rs
src/protocols/types/: mod.rs
src/versia_api/: instance_discovery.rs
src/versia_protocol/: fetch.rs  mod.rs  requests.rs
src/versia_types/: content_format.rs  follow.rs  follow_response.rs  group.rs  instance_metadata.rs  mod.rs  notes.rs  postable.rs  public_key.rs  serde_fns.rs  user.rs
src/versia_types/entities/: change_follow.rs  delete.rs  (+8 more)
(+42 files in other folders)
