[package]
name = "bayou"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
actix-web = "4"

confik = "0.11"
deadpool-postgres = { version = "0.12", features = ["serde"] }
serde = "1.0.204"

tokio-postgres = "0.7.11"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
refinery = { version = "0.8", features = ["tokio-postgres"]}
serde_json = "1.0.122"

httpdate = "1.0.3"
reqwest = "0.12.4"
url = {version = "2.5.1", features = ["serde"]}
config = { version = "0.14.0", features = ["toml"]}
xsd-types = {version = "0.9.5", features = ["serde"]}
chrono = "0.4.38"
async-trait = "0.1.81"

# cryptography stuff
argon2 = "0.5.3"
# we will not be using rsa until the side channel is fixed or its determined not a danger
# rsa = "0.9.6"
ed25519 = "2.2.3"
ed25519-dalek = {version = "2.1.1", features = ["pkcs8", "rand_core", "serde", "pem"]}
rand = "0.8.5"
textnonce = "1.0.0"
base64 = "0.22.1"
sha2 = "0.10.8"

[dev-dependencies]
serial_test = "3.1.1"
